@@ -23,15 +23,20 @@ extern "C" {
 
 #define Ehbi_stack_alloc_struct(tmp, size, err) \
 	do { \
+		tmp.bytes = NULL; \
+		tmp.bytes_len = 0; \
+		tmp.bytes_used = 0; \
+		tmp.sign = 0; \
 		tmp.bytes = (unsigned char *)ehbi_stack_alloc(size); \
 		if (!tmp.bytes) { \
-			tmp.bytes_len = 0; \
 			Ehbi_log_error2("Could not %s(%lu) bytes", \
 					ehbi_stack_alloc_str, \
 					(unsigned long)(size)); \
 			err = EHBI_STACK_TOO_SMALL; \
 		} else { \
 			tmp.bytes_len = size; \
+			tmp.bytes[size-1] = 0x00; \
+			tmp.bytes_used = 1; \
 		} \
 	} while (0)
 
