@@ -1,3 +1,12 @@
+2017-05-21  Eric Herman <eric@freesa.org>
+
+	fix offset compensation for zero prefixing
+
+	* src/ehbigint-priv.h: cleaner temp struct initialization
+	* tests/test-from-binstr-to-binstr-round-trip.c: fix sign error
+	* misc/pre-tidy.patch: respin
+
+
 2017-04-29  Eric Herman <eric@freesa.org>
 
 	finally figured out there was a bug in exp-mod, which caused
